--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-body { background-color: rgb(0, 255, 200) }
+body { background-color: rgb(0, 195, 255) }
 #wrapper {
   width: 960px;
   margin-left: auto;
@@ -28,9 +28,10 @@ textarea {
   height: 200px;
   font-size: 18px;
 }
-h {
-    font-family: 'Ruslan Display', cursive; 
+h1 {
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 48px;
 }
-#articles, #notes {
+#articles, #notes, h3 {
     font-family: 'Acme', sans-serif;
 }
